[gd_scene load_steps=7 format=3 uid="uid://dmfiavy81h85b"]

[ext_resource type="Script" path="res://world/interface/stage_info.gd" id="1_hcte0"]
[ext_resource type="PackedScene" uid="uid://dkpq6f8l2i2t3" path="res://world/characters/character_chibi_boko.tscn" id="2_botg6"]
[ext_resource type="Texture2D" uid="uid://dt6jjx51bd4md" path="res://assets/interface/speech-bubble.png" id="3_06q5n"]
[ext_resource type="Theme" uid="uid://bw14mtcn80nwt" path="res://core/resources/theme/theme_boko_bubble.tres" id="4_fojmy"]
[ext_resource type="FontVariation" uid="uid://cyb57wcgd753u" path="res://core/resources/theme/font_var_dialog_box.tres" id="5_xcph3"]
[ext_resource type="AudioStream" uid="uid://bge3n81uhhjjg" path="res://audio/sounds/speech_sound.ogg" id="6_aohk3"]

[node name="ChibiBoko" type="Node2D"]
script = ExtResource("1_hcte0")

[node name="CharacterChibiBoko" parent="." instance=ExtResource("2_botg6")]

[node name="SpeechBubble" type="NinePatchRect" parent="."]
self_modulate = Color(1, 1, 1, 0.85)
offset_left = 37.0
offset_top = -34.0
offset_right = 85.0
offset_bottom = 14.0
pivot_offset = Vector2(0, 24)
texture = ExtResource("3_06q5n")
patch_margin_left = 24
patch_margin_top = 24
patch_margin_right = 24
patch_margin_bottom = 24

[node name="TextBubble" type="RichTextLabel" parent="."]
offset_left = 49.0
offset_top = -17.0
offset_right = 49.0
offset_bottom = -17.0
theme = ExtResource("4_fojmy")
theme_override_fonts/normal_font = ExtResource("5_xcph3")
bbcode_enabled = true
fit_content = true
autowrap_mode = 0

[node name="Speech" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_aohk3")
volume_db = 10.0
bus = &"UISound"
